gsm: Reorder how we fill session, to start with required components

We first fill with required components because we always want to
guarantee that explicitly defined required components are available.
Then we add normal autostart applications and default providers, which
can be overridden.

Part of https://bugzilla.gnome.org/show_bug.cgi?id=642367